--- a/experience.html
+++ b/experience.html
@@ -7,14 +7,14 @@
     <title>Резюме технического писателя. Владимир Маркиев</title>
 
     <!-- Preload fonts -->
-    <link rel="preload" href="style_fonts.css" as="style">
+    <link rel="preload" href="css/style_fonts.css" as="style">
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="style_main.css">
-    <link rel="stylesheet" href="style_nav.css">
-    <link rel="stylesheet" href="style_accordion.css">
-    <link rel="stylesheet" href="style_search-stub.css">
-    <link rel="stylesheet" href="style_footer.css">
+    <link rel="stylesheet" href="css/style_main.css">
+    <link rel="stylesheet" href="css/style_nav.css">
+    <link rel="stylesheet" href="css/style_accordion.css">
+    <link rel="stylesheet" href="css/style_search-stub.css">
+    <link rel="stylesheet" href="css/style_footer.css">
     <!-- Stylesheets -->
     
     <meta name="robots" content="follow, index" />
@@ -44,18 +44,21 @@
     <!-- Favicons -->
 
     <!-- Yandex.Metrika counter -->
-    <script type="text/javascript" src="js_metrika.js">
+    <script src="js/js_metrika.js">
     </script>
     <noscript>
         <div><img src="https://mc.yandex.ru/watch/62734534" style="position:absolute; left:-9999px;" alt="" /></div>
     </noscript>
     <!-- /Yandex.Metrika counter -->
 
-    <script type="text/javascript" src="js_nav.js">
+    <script src="js/js_nav.js" defer>
     </script>
 
-    <script type="text/javascript" src="js_stub.js">
+    <script src="js/js_stub.js" defer>
     </script>
+
+     <script src="js/js_acc.js" defer>
+        </script>
 
 </head>
 
@@ -64,7 +67,7 @@
 <body>
     <!-- МЕНЮ -->
     <div id="mySidebar" class="sidebar">
-        <a href="javascript:void(0);" class="closebtn" onclick="closeNav()">Скрыть</a>
+        <a href="javascript:void(0);" class="closebtn" id="closebtn">Скрыть</a>
         <a tabindex="1" href="index.html">Главная</a>
         <a tabindex="2" href="about.html">Обо мне</a>
         <a tabindex="3" href="education.html">Образование</a>
@@ -76,7 +79,7 @@
     <ul class="breadcrumb" id="breadcrumb">
         <li>
             <!-- КНОПКА МЕНЮ -->
-            <button class="openbtn" onclick="openNav()">Открыть меню</button>
+            <button class="openbtn" id="openbtn">Открыть меню</button>
          </li>
         <li>
             <a tabindex="7" href="index.html">Главная</a>
@@ -313,9 +316,6 @@
                 
             </div>
         </div>
-
-        <script type="text/javascript" src="js_acc.js">
-        </script>
 
         <div class="footer">
         <p>2020&nbsp;-&nbsp;
