Убрал JS-защиту почты и телефона в файл навигации и убрал JS из HTML. Переписал навыки.

--- a/experience.html
+++ b/experience.html
@@ -318,10 +318,7 @@
         </div>
 
         <div class="footer">
-        <p>2020&nbsp;-&nbsp;
-            <script>
-                    document.write(new Date().getFullYear())
-            </script>.
+        <p>2020&nbsp;-&nbsp;<script>document.write(new Date().getFullYear())</script>.
             <a href="https://github.com/Grolribasi/grolribasi.github.io">Исходники на GitHub</a>.
         </p>
         <br> 
@@ -368,12 +365,12 @@
                     <path id="wha" d="M12.036 5.339c-3.635 0-6.591 2.956-6.593 6.589-.001 1.483.434 2.594 1.164 3.756l-.666 2.432 2.494-.654c1.117.663 2.184 1.061 3.595 1.061 3.632 0 6.591-2.956 6.592-6.59.003-3.641-2.942-6.593-6.586-6.594zm3.876 9.423c-.165.463-.957.885-1.337.942-.341.051-.773.072-1.248-.078-.288-.091-.657-.213-1.129-.417-1.987-.858-3.285-2.859-3.384-2.991-.099-.132-.809-1.074-.809-2.049 0-.975.512-1.454.693-1.653.182-.2.396-.25.528-.25l.38.007c.122.006.285-.046.446.34.165.397.561 1.372.611 1.471.049.099.083.215.016.347-.066.132-.099.215-.198.33l-.297.347c-.099.099-.202.206-.087.404.116.198.513.847 1.102 1.372.757.675 1.395.884 1.593.983.198.099.314.083.429-.05.116-.132.495-.578.627-.777s.264-.165.446-.099 1.156.545 1.354.645c.198.099.33.149.38.231.049.085.049.482-.116.945zm3.088-14.762h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-6.967 19.862c-1.327 0-2.634-.333-3.792-.965l-4.203 1.103 1.125-4.108c-.694-1.202-1.059-2.566-1.058-3.964.002-4.372 3.558-7.928 7.928-7.928 2.121.001 4.112.827 5.609 2.325s2.321 3.491 2.32 5.609c-.002 4.372-3.559 7.928-7.929 7.928z" />
                 </svg>
             </a>
-            <a onmousedown="event.preventDefault ? event.preventDefault() : event.returnValue = false" class="icons-link" href="tel:+79211872272" target="_blank">
+            <a class="icons-link noaction" href="tel:+79211872272" target="_blank">
                 <svg class="icons pho" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                     <path id="pho" d="M14.89 23.654c-7.367 3.367-18.802-18.86-11.601-22.615l2.107-1.039 3.492 6.817-2.082 1.026c-2.189 1.174 2.37 10.08 4.609 8.994.091-.041 2.057-1.007 2.064-1.011l3.521 6.795c-.008.004-1.989.978-2.11 1.033zm-1.538-13.409l2.917.87c.223-.747.16-1.579-.24-2.317-.399-.739-1.062-1.247-1.808-1.469l-.869 2.916zm1.804-6.058c1.551.462 2.926 1.516 3.756 3.051.831 1.536.96 3.263.498 4.813l-1.795-.535c.325-1.091.233-2.306-.352-3.387-.583-1.081-1.551-1.822-2.643-2.146l.536-1.796zm.95-3.187c2.365.705 4.463 2.312 5.729 4.656 1.269 2.343 1.466 4.978.761 7.344l-1.84-.548c.564-1.895.406-4.006-.608-5.882-1.016-1.877-2.696-3.165-4.591-3.729l.549-1.841z" />
                 </svg>
             </a>
-            <a onmousedown="event.preventDefault ? event.preventDefault() : event.returnValue = false" class="icons-link" href="/cdn-cgi/l/email-protection#c7b1aba6a3aeaaaeb5f5f3e9f7ffe9fef587a0aaa6aeabe9a4a8aaf8b4b2a5ada2a4b3fa1766177917791776164e1772177a177f1772e71646e716461777177e16451777e1a5a8a3befa175b17771647177d177f17721775e71755177c17771773177b177f1647ebe7177017731647177717751646164517751644177e16451772eb" target="_blank">
+            <a class="icons-link noaction" href="/cdn-cgi/l/email-protection#c7b1aba6a3aeaaaeb5f5f3e9f7ffe9fef587a0aaa6aeabe9a4a8aaf8b4b2a5ada2a4b3fa1766177917791776164e1772177a177f1772e71646e716461777177e16451777e1a5a8a3befa175b17771647177d177f17721775e71755177c17771773177b177f1647ebe7177017731647177717751646164517751644177e16451772eb" target="_blank">
                 <svg class="icons ema" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd">
                     <path fill="white" d="M19 24h-14c-2.761 0-5-2.239-5-5v-14c0-2.761 2.239-5 5-5h14c2.762 0 5 2.239 5 5v14c0 2.761-2.238 5-5 5z" />
                     <path id="ema" d="M19 24h-14c-2.761 0-5-2.239-5-5v-14c0-2.761 2.239-5 5-5h14c2.762 0 5 2.239 5 5v14c0 2.761-2.238 5-5 5zm-.141-6.333c.63 0 1.141-.512 1.141-1.142v-9.05c0-.63-.511-1.142-1.141-1.142h-13.718c-.63 0-1.141.512-1.141 1.142v9.05c0 .63.511 1.142 1.141 1.142h13.718zm-6.859-4.058l-6.228-4.321-.014 7.712h12.457v-7.712l-6.215 4.321zm5.913-6.609c-1.745 1.215-5.913 4.153-5.913 4.153l-5.947-4.153h11.86z" />
