Улучшения. Переписал текст на страницах навыков и опыта, начал переписывать страницу о себе, немного изменил код и цвета.

--- a/skills.html
+++ b/skills.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/style_main.css">
     <link rel="stylesheet" href="css/style_nav.css">
     <link rel="stylesheet" href="css/style_footer.css">
-    <link rel="stylesheet" href="css/style_search-stub.css">
+    <link rel="stylesheet" href="css/style_skils_exp.css">
     <link rel="stylesheet" href="css/style_accordion.css">
     <!-- Stylesheets -->
 
@@ -89,18 +89,18 @@
     <div class="main">
         <div class="content">
             <h1 class="h1">Мои навыки как технического писателя</h1>
-            <p>Если вы никогда не слышали о профессии технического писателя, приведу краткое пояснение своими словами. Технический писатель - это человек, который пишет документацию. Как правило, в сфере IT. Эта профессия встречается редко в объявлениях на сайтах вакансий. Обычно технические писатели решают следующие задачи: описывают работу системы, собирают и сохраняют знания разработчиков и аналитиков, структурируют уже существующие разрозненные фрагменты информации в одном месте. Реже, технические писатели могут писать что-нибудь на языках программирования, тестировать функции или, например, работать с API. Должность технического писателя важна настолько же, насколько важна документация для конкретного продукта. То есть, прежде чем вводить новую должность, необходимо взвесить все за и против.</p>
+            <p>Если вы никогда не слышали о профессии технического писателя, попробую объяснить кратко своими словами, кто это такой. Технический писатель - это человек, который пишет документацию. Технический писатель может писать документацию в любой сфере. Но в сфере IT документация востребована чаще. Из своего опыта могу сказать, что на сайтах вакансий очень мало объявлений о вакансиях технического писателя. Обычно технические писатели решают следующие задачи: описывают работу системы, собирают и сохраняют знания разработчиков и аналитиков, структурируют уже существующие разрозненные фрагменты информации в одном месте. Реже, технические писатели могут писать что-нибудь на языках программирования, тестировать функции или, например, работать с API. Должность технического писателя важна настолько же, насколько важна документация для конкретного продукта. То есть, прежде чем вводить новую должность, необходимо взвесить все за и против.</p>
             <p>Я считаю, что документация нужна и важна. Мне очень нравится профессия технического писателя. Я стараюсь развивать свои навыки. Но свой сайт я обновляю реже, чем узнаю что-то новое, поэтому информация на этой странице может быть не самой полной.</p>
-            <p>Один из моих самых важных навыков - это уметь писать документацию так, чтобы её потом можно было перевести. Я, как человек, долго занимавшийся переводом, понимаю все сложности локализации, поэтому умею предвидеть трудности при переводе ещё до его начала. Другие мои навыки как технического писателя перечислены ниже:</p>
+            <p>Один из моих самых важных навыков - это уметь писать документацию так, чтобы её потом можно было перевести. Я, как человек, долго занимавшийся переводом, понимаю сложности локализации, поэтому умею предвидеть трудности при переводе ещё до его начала. Другие мои навыки как технического писателя перечислены ниже:</p>
             
-            <button class="accordion">Не обязательно в таком порядке:</button>
+            <button class="accordion">Необязательно в таком порядке:</button>
             <div class="panel">
                 <ul class="list">
                     <li>Знаю DITA: как работают ключи, как повторно использовать элементы, смогу создать PDF, HTML или другой документ при помощи DITA OT, сумею отредактировать шаблоны DITA OT, но скорей всего не сумею создать сложный шаблон.</li>
                     <li>Свободно пишу на Markdown. Это удобный язык разметки для простых задач.</li>
                     <li>Умею писать на AsciiDoc и экспортировать в PDF или HTML. Я писал на нём совсем немного, но язык приятный. Я бы с большим удовольствием поработал с ним ещё.</li>
                     <li>Умею работать с YouTrack, ставить задачи, оценивать время на выполнение и отчитываться о проделанной работе.</li>
-                    <li>Люблю Linux, знаю основные команды терминала, писал <a href="cases.html#linux">статью</a> по теме. При помощи гугла, инструкций и интуиции могу даже настроить DNS.</li>
+                    <li>Люблю Linux, знаю основные команды терминала, писал <a href="cases.html#linux" title="Открыть в текущей вкладке">статью</a> по теме. При помощи гугла, инструкций и интуиции могу даже настроить DNS. С ядром не работал.</li>
                     <li>Умею работать с Git из терминала Linux и через GUI. Знаю Git Fetch, Pull, Commit, Push, могу создавать ветки, объединять и работать с репозиториями.</li>
                     <li>Быстро обучаюсь. Быстро изучаю новое программное обеспечение. За месяц смог разобраться с Oxygen XML. За 20 дней изучил основы HTML, чтобы создать сайт.</li>
                     <li>Любознателен. Люблю изучать функции и настройки программ. Например, добавить словарь в Sublime Text, подключить GIT к редактору и т.д.</li>
