переписал страницы обо мне, изменил стили, добавил новые блоки

--- a/about.html
+++ b/about.html
@@ -85,8 +85,9 @@
     <div class="main">
         <div class="content">
             <h1 class="h1">Владимир Маркиев. Я о себе и в соцсетях</h1>
-            <p>На этой странице я рассказываю о себе в свободной форме. Здесь вы можете узнать о моих интересах и хобби, а также ознакомиться с моими проектами и профилями в соцсетях.</p>
+            <p>На этой странице я рассказываю о себе в свободной форме. Здесь вы можете узнать о моих <a href="#interests">интересах и хобби</a>, а также ознакомиться с моими <a href="#projects">проектами и профилями</a> в соцсетях.</p>
         </div>
+        <a name="interests"></a>
         <div class="content">
             <h2 class="h2">О себе в свободной форме</h2>
             <p>Я живу в Санкт-Петербурге, увлекаюсь фотографией, автомобилями, музыкой и историей. У меня большая коллекция фотографий, которые я люблю выкладывать в фотоальбомы на своей <a href="#vk">странице ВК</a>.</p>
@@ -94,11 +95,16 @@
             <p>Из музыки я люблю разные жанры. Самым первым любимым жанром был панк-рок, но сейчас мне нравится кантри, инди, альтернатива и многое другое. Люблю читать и смотреть интервью любимых музыкантов и рассуждать о тенденциях в музыке любых лет.</p>
             <p>А ещё меня увлекает история. Я обожаю читать и смотреть сюжеты про историю разных мест. От Карелии, откуда я родом, до Санкт-Петербурга, где я живу. От поморья до глубокой Тайги. Про староверов, коренные народы и местных жителей. особенно меня увлекает история Петроградской стороны. Я люблю ходить по улицам, делать пометки по каждому дому, а дома читать про каждого жителя, про архитектуру. Меня восхищает то, как связаны истории людей и мест, как далеко тянутся связи. Я даже пишу большой проект про историю жителей Петроградской стороны. Хочу создать бот в телеграм, который бы выдавал историю по каждому дому. Если у вас есть любая история любого жителя Петроградской стороны - про известного или неизвестного архитектора, поэта, военного - пишите мне, мне очень интересно. Если вы сами или кто-то из вашей семьи и знакомых жил на Петроградской стороне, тоже пишите мне. Мне интересна любая история. Мои контакты можно найти на этой странице.<br>P.S. Если знаете что-то о создании ботов в телеграм, тоже пишите.</p>
         </div>
-
+        <a name="projects"></a>
         <div class="content">
             <h2 class="h2">Социальные сети и проекты</h2>
             <fieldset class="fs01">
-                <legend><a name="vk" href="https://vk.com/cookiespunk" class="soc vk" target="_blank" title="Открыть в новой вкладке">Владимир Петров</a>|<a href="https://vk.com/theptsd" class="soc vk2" target="_blank" title="Открыть в новой вкладке">ThePTSD</a>|<a href="https://vk.com/behindmousing" class="soc vk3" target="_blank" title="Открыть в новой вкладке">Замышление</a></legend>
+                <legend><a tabindex="1" href="https://github.com/Grolribasi/" class="soc gh" target="_blank" title="Открыть в новой вкладке">GitHub</a></legend>
+                <p class="soc">Мой GitHub! Всю прелесть GitHub я открыл для себя совсем недавно. Поэтому у меня ещё мало репоизиториев. Но мне нравится git и я стараюсь его развивать. Одно из направлений развития - это <a href="https://github.com/Grolribasi/grolribasi.github.io" target="_blank" title="Открыть в новой вкладке">перенос сайта</a> на GitHub Pages. Так классно иметь возможность работать над сайтом с нескольких компьютеров и так классно вести разработку в отдельной ветке.</p>
+            </fieldset>
+            <br>
+            <fieldset class="fs01">
+                <legend><a tabindex="2" name="vk" href="https://vk.com/cookiespunk" class="soc vk" target="_blank" title="Открыть в новой вкладке">Владимир Петров</a>|<a tabindex="3" href="https://vk.com/theptsd" class="soc vk2" target="_blank" title="Открыть в новой вкладке">ThePTSD</a>|<a tabindex="4" href="https://vk.com/behindmousing" class="soc vk3" target="_blank" title="Открыть в новой вкладке">Замышление</a></legend>
                 <p class="soc"><a href="https://vk.com/cookiespunk">Владимир Петров</a> - моя личная страница ВК. Моя настоящая фамилия - Маркиев, но с ВК так повелось с давних пор. Сейчас даже поисковики выдают эту страницу ВК в результатах по запросу "Владимир Маркиев".</p>
                 <p>Страница ThePTSD создавалась для продвижения канала на YouTube, но вскоре стала популярнее его. Потом у меня не осталось времени на проект PTSD, я решил временно его остановить. Сейчас я не работаю переводчиком, но за сферой поглядываю. Были мысли возобновить проект PTSD, но пока я не уверен, что хочу.
                 </p>
@@ -107,48 +113,48 @@
             </fieldset>
             <br>
             <fieldset class="fs01">
-                <legend> <a name="yt" href="https://www.youtube.com/channel/UC_n20vgzZheV8dLhOfzlczA" class="soc yt" target="_blank">PTSD - Дневник Переводчика</a></legend>
-                <p class="soc">Тот самый YouTube канал, который я упоминал на странице <a href="experience.html#dec20">Опыт работы</a> и выше на странице. Я приостановил работу над проектом, пока не придумаю новое направление развития. Нужно повышать качество контента, улучшать оборудование для записи. Пока что у меня нет на это времени, да и интересы больше направлены в сферу технического писательства. Однако, посмотреть всё равно советую, если вам близка тема переводов.</p>
+                <legend> <a tabindex="5" name="yt" href="https://www.youtube.com/channel/UC_n20vgzZheV8dLhOfzlczA" class="soc yt" target="_blank" title="Открыть в новой вкладке">PTSD - Дневник Переводчика</a></legend>
+                <p class="soc">YouTube канал, который упоминается выше на этой странице и на странице <a href="experience.html#dec20">Опыт работы</a>. Я приостановил работу над проектом, пока не придумаю новое направление развития. Нужно повышать качество контента, улучшать оборудование для записи. Пока что у меня нет на это времени, да и интересы больше направлены в сферу технического писательства. Однако, посмотреть всё равно советую, если вам близка тема переводов.</p>
             </fieldset>
             <br>
             <fieldset class="fs01">
-                <legend><a href="https://www.instagram.com/proftradi/" class="soc ig" target="_blank">@Proftradi</a></legend>
-                <p class="soc">Мой профиль Instagram. Профиль Proftradi создавался для продвижения YouTube канала. Иногда я им пользуюсь, чтобы донести внезапно возникшие мысли, но по большей части инстаграм заброшен.</p>
+                <legend><a tabindex="6" href="https://www.instagram.com/proftradi/" class="soc ig" target="_blank" title="Открыть в новой вкладке">@Proftradi</a></legend>
+                <p class="soc">Профиль Proftradi в Instagram создавался для продвижения YouTube канала. Я периодически вспоминаю о нём, чтобы поделиться спонтанными мыслями или вопросами, но по большей части профиль приостановлен как и весь проект PTSD.</p>
             </fieldset>
             <br>
             <fieldset class="fs01">
-                <legend><a tabindex="9" href="https://www.facebook.com/vladimir.markiev" class="soc fb" target="_blank">Facebook</a></legend>
-                <p class="soc">Я редко пользуюсь фейсбуком, тем не менее, если фейсбук очень нужен, то он у меня есть, через него можно связаться со мной. Правда ответ может заставить себя ждать, редко там бываю. Зато я всегда отвечаю на письма на email.</p>
+                <legend><a tabindex="7" href="https://www.facebook.com/vladimir.markiev" class="soc fb" target="_blank" title="Открыть в новой вкладке">Facebook</a></legend>
+                <p class="soc">Я редко пользуюсь фейсбуком. Даю ссылку на свой профиль на случай, если для вас такой способ связи является предпочтительным. Но вернее будет равно писать на <a href="#em">электронную почту</a>, на письма я отвечаю всегда.</p>
             </fieldset>
             <br>
             <fieldset class="fs01">
-                <legend><a tabindex="10" href="https://www.linkedin.com/in/vladimir-markiev-75737a138/" class="soc in" target="_blank">Linkedin</a></legend>
-                <p class="soc">Linkedin - не до конца понятная для меня соцсеть. Профиль я создал, заполнил, пробовал откликаться на вакансии, но хоть какой-то отдачи я не увидел. Только профиль я удалять, конечно, не стал.</p>
+                <legend><a tabindex="8" href="https://www.linkedin.com/in/vladimir-markiev-75737a138/" class="soc in" target="_blank" title="Открыть в новой вкладке">Linkedin</a></legend>
+                <p class="soc">Я зарегистрировался в Linkedin давно, но так до конца и не понял суть этой соцсети. Общаться неудобно, все предложения о работе ссылаются на сторонние сайты. Но мне всегда приходят уведомления, если кто-то хочет добавить меня в свою сеть. Я никогда не отказываю.</p>
             </fieldset>
             <br>
             <fieldset class="fs01">
-                <legend><a tabindex="11" href="https://api.whatsapp.com/send?phone=+79211872272" class="soc wa" target="_blank">Whatsapp</a></legend>
-                <p class="soc">Просто кликаете на ссылку, вас либо перенесёт на веб-страницу WhatsApp, либо автоматически откроется приложение. Нет необходимости запоминать или записывать мой номер телефона.</p>
+                <legend><a tabindex="9" href="https://api.whatsapp.com/send?phone=+79211872272" class="soc wa noaction" target="_blank" title="Открыть в новой вкладке">Whatsapp</a></legend>
+                <p class="soc">Я всегда держу WatsApp радом как один из самых распространённых мессенджеров. Просто кликните на ссылку, вас либо перенесёт на веб-страницу WhatsApp, либо автоматически откроется приложение. Нет необходимости запоминать или записывать мой номер телефона.</p>
             </fieldset>
             <br>
             <fieldset class="fs01">
-                <legend><a tabindex="12" href="https://join.skype.com/invite/jz5UwAeAepqL" class="soc sk" target="_blank">Vladimir Markiev</a></legend>
-                <p class="soc">Мой профиль Skype. Отвечаю оперативно, при необходимости можно назначать аудио- и видеовстречи. Имеется веб-камера на домашнем компьютере, но предпочитаю использовать мобильную версию.</p>
+                <legend><a tabindex="10" href="https://join.skype.com/invite/jz5UwAeAepqL" class="soc sk" target="_blank" title="Открыть в новой вкладке">Vladimir Markiev</a></legend>
+                <p class="soc">Мой профиль Skype. Отвечаю оперативно, при необходимости можно назначать аудио- и видеовстречи. Только перед встречей лучше сперва представиться.</p>
             </fieldset>
             <br>
             <fieldset class="fs01">
-                <legend><a tabindex="13" href="https://t.me/grolribasi" class="soc tg" target="_blank">@Grolribasi</a></legend>
-                <p class="soc">Telegram как способ связи мне нравится в последнее время всё больше, нажмите на ссылку, откроется приложение или веб-версия Telegram в новой вкладке. Можно ещё найти меня по имени профиля - Grolribasi.</p>
+                <legend><a tabindex="11" href="https://t.me/grolribasi" name="tg" class="soc tg" target="_blank" title="Открыть в новой вкладке">@Grolribasi</a></legend>
+                <p class="soc">Telegram как оперативный способ связи мне нравится в последнее время всё больше. Он быстрый, не нагружает телефон, поддерживает звонки и синхронизируется без дополнительных настроек. Нажмите на ссылку, откроется приложение или веб-версия Telegram в новой вкладке. Можно ещё найти меня по имени профиля - Grolribasi.</p>
             </fieldset>
             <br>
             <fieldset class="fs01">
-                <legend><a class="soc em noaction" href="mailto:vladimir-markiev@gmail.com?subject=Сообщение с сайта&body=Маркиев Владмир, здравствуйте," class="soc no-sel" target="_blank">vladimir-markiev@gmail.com</a></legend>
-                <p class="soc">Да, у меня есть три адреса электронной почты. Нет, вы не можете их скопировать из соображений безопасности (эта мера помогает мне избежать спам-писем). Вы можете писать на любой из трёх, я обязательно отвечу настолько быстро, насколько смогу.</p>
+                <legend><a tabindex="12" class="soc em noaction" href="mailto:vladimir-markiev@gmail.com?subject=Сообщение с сайта&body=Маркиев Владмир, здравствуйте," class="soc" target="_blank" name="em" title="Открыть в новой вкладке">vladimir-markiev@gmail.com</a></legend>
+                <p class="soc">Просто нажмите на адрес электронной почты, откроется новая вкладка с частично заполненными темой и телом письма. Чтобы ссылка открылась, необходимо иметь установленный почтовый клиент на компьютере. Но вы можете просто скопировать почтовый адрес и вставить его в письмо. Электронная почта - это самый простой и надёжный способ связи со мной. Я читаю все письма и отвечаю на все запросы.</p>
             </fieldset>
             <br>
             <fieldset class="fs01">
-                <legend><a href="tel:+79211872272" class="soc ph no-sel noaction">+79211872272</a></legend>
-                <p class="soc">Самый простой способ связи. Нажимаете на номер, отправляете вызов, я на другом конце отвечаю. Скопировать нельзя, защита от спам-звонков и смс.</p>
+                <legend><a tabindex="13" href="tel:+79211872272" class="soc ph no-sel noaction" title="Позвонить">+79211872272</a></legend>
+                <p class="soc">Мне часто поступают спам-звонки, я настораживаюсь при виде незнакомого номера. Поэтому я защитил номер телефона от копирования и перетаскивания. Если нужно оперативно связаться со мной по телефону, лучше использовать мессенджеры, например <a href="#tg">Telegram</a>. Используйте звонок в самом крайнем случае или чтобы добавить меня в контакты.</p>
             </fieldset>
         </div>
 
