--- a/experience.html
+++ b/experience.html
@@ -82,14 +82,14 @@
             <a tabindex="7" href="index.html">Главная</a>
         </li>
         <li>
-            <a href="#top">Опыт работы</a>
+            <a href="#top" title="Наверх">Опыт работы</a>
         </li>
     </ul>
          
     <div class="main">
         <div class="content">
             <h1 class="h1">Моё резюме</h1>
-            <p>Эта страница посвящена моему опыту работы. Техническим писателем я стал не сразу, долгое время я работал переводчиком и даже успел попасть в сферу ВЭД. Я постарался описать каждое место работы кратко и объективно. Вы можете посмотреть подробности, нажав на ссылки ниже:</p>
+            <p>Эта страница посвящена моему опыту работы. Техническим писателем я стал не сразу, долгое время я работал переводчиком и даже успел попасть в сферу ВЭД. Если вы хотите ознакомиться с моими навыками, переходите на страницу <a href="skills.html">Навыки</a>. Примеры работ я привёл на странице <a href="cases.html">Портфолио</a>. На этой странице я постарался описать каждое место работы кратко и объективно. Вы можете быстро посмотреть любое моё место работа, нажав на ссылки ниже:</p>
              <a href="#dec20" class="blocklink">
                     DocsVision
                 </a>
@@ -286,6 +286,9 @@
                     <circle cx="12" cy="12" r="12" fill="white" />
                     <path id="ins" d="M15.233 5.488c-.843-.038-1.097-.046-3.233-.046s-2.389.008-3.232.046c-2.17.099-3.181 1.127-3.279 3.279-.039.844-.048 1.097-.048 3.233s.009 2.389.047 3.233c.099 2.148 1.106 3.18 3.279 3.279.843.038 1.097.047 3.233.047 2.137 0 2.39-.008 3.233-.046 2.17-.099 3.18-1.129 3.279-3.279.038-.844.046-1.097.046-3.233s-.008-2.389-.046-3.232c-.099-2.153-1.111-3.182-3.279-3.281zm-3.233 10.62c-2.269 0-4.108-1.839-4.108-4.108 0-2.269 1.84-4.108 4.108-4.108s4.108 1.839 4.108 4.108c0 2.269-1.839 4.108-4.108 4.108zm4.271-7.418c-.53 0-.96-.43-.96-.96s.43-.96.96-.96.96.43.96.96-.43.96-.96.96zm-1.604 3.31c0 1.473-1.194 2.667-2.667 2.667s-2.667-1.194-2.667-2.667c0-1.473 1.194-2.667 2.667-2.667s2.667 1.194 2.667 2.667zm4.333-12h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm.952 15.298c-.132 2.909-1.751 4.521-4.653 4.654-.854.039-1.126.048-3.299.048s-2.444-.009-3.298-.048c-2.908-.133-4.52-1.748-4.654-4.654-.039-.853-.048-1.125-.048-3.298 0-2.172.009-2.445.048-3.298.134-2.908 1.748-4.521 4.654-4.653.854-.04 1.125-.049 3.298-.049s2.445.009 3.299.048c2.908.133 4.523 1.751 4.653 4.653.039.854.048 1.127.048 3.299 0 2.173-.009 2.445-.048 3.298z" />
                 </svg>
+            </a>
+            <a class="icons-link" href="https://github.com/Grolribasi/">
+                <svg class="icons git" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><circle style="fill:#ffffff;fill-opacity:1;stroke-width:1.17547429" id="path874" cx="12" cy="12" r="12" /><path id="git" fill="#577284" d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-4.466 19.59c-.405.078-.534-.171-.534-.384v-2.195c0-.747-.262-1.233-.55-1.481 1.782-.198 3.654-.875 3.654-3.947 0-.874-.312-1.588-.823-2.147.082-.202.356-1.016-.079-2.117 0 0-.671-.215-2.198.82-.64-.18-1.324-.267-2.004-.271-.68.003-1.364.091-2.003.269-1.528-1.035-2.2-.82-2.2-.82-.434 1.102-.16 1.915-.077 2.118-.512.56-.824 1.273-.824 2.147 0 3.064 1.867 3.751 3.645 3.954-.229.2-.436.552-.508 1.07-.457.204-1.614.557-2.328-.666 0 0-.423-.768-1.227-.825 0 0-.78-.01-.055.487 0 0 .525.246.889 1.17 0 0 .463 1.428 2.688.944v1.489c0 .211-.129.459-.528.385-3.18-1.057-5.472-4.056-5.472-7.59 0-4.419 3.582-8 8-8s8 3.581 8 8c0 3.533-2.289 6.531-5.466 7.59z"/></svg>
             </a>
             <a class="icons-link" href="https://t.me/grolribasi" target="_blank">
                 <svg class="icons tel" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:1.41421;">
