rem вместо em, новые акцентные цвета, иконки и немного изменил текст

--- a/about.html
+++ b/about.html
@@ -17,8 +17,8 @@
     <!-- Stylesheets -->
 
     <meta name="robots" content="follow, index" />
-    <meta name="description" content="Проекты и страницы в сосцестях Владимира Маркиева, технического писателя из Санкт-Петербурга. Technical writer Vladimir Markiev projects and social networks." />
-    <meta property="og:title" content="Проекты и страницы в сосцестях Владимира Маркиева, технического писателя из Санкт-Петербурга." />
+    <meta name="description" content="Рассказ о себе, проекты, контакты и страницы в сосцестях Владимира Маркиева, технического писателя из Санкт-Петербурга. About technical writer Vladimir Markiev projects, contacts, and social networks." />
+    <meta property="og:title" content="Рассказ о себе, проекты, контакты и страницы в сосцестях Владимира Маркиева, технического писателя из Санкт-Петербурга." />
     <meta property="og:type" content="profile" />
     <meta property="profile:first_name" content="Владимир" />
     <meta property="profile:last_name" content="Маркиев" />
@@ -26,7 +26,7 @@
     <meta property="og:url" content="https://vladimir-markiev.name/" />
     <link rel="canonical" content="https://vladimir-markiev.name/" />
     <meta property="og:image" content="https://vladimir-markiev.name/img/profile.jpg">
-    <meta property="og:description" content="Проекты и страницы в сосцестях Владимира Маркиева, технического писателя из Санкт-Петербурга." />
+    <meta property="og:description" content="Рассказ о себе, проекты, контакты и страницы в сосцестях Владимира Маркиева, технического писателя из Санкт-Петербурга." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Markiev Vladimir">
     
@@ -84,7 +84,7 @@
     
     <div class="main">
         <div class="content">
-            <h1 class="h1">Владимир Маркиев. Я о себе и в соцсетях</h1>
+            <h1 class="h1">Владимир Маркиев. Рассказ о себе, ссылки на соцсети, проекты и контакты</h1>
             <p>На этой странице я рассказываю о себе в свободной форме. Здесь вы можете узнать о моих <a href="#interests">интересах и хобби</a>, а также ознакомиться с моими <a href="#projects">проектами и профилями</a> в соцсетях.</p>
         </div>
         <a name="interests"></a>
