--- a/cases.html
+++ b/cases.html
@@ -96,8 +96,8 @@
         
         <div class="content cases">
                 
-                <p><a class="source" href="img/RDP_Linux.pdf" target="_blank">RDP-клиенты для Linux.pdf</a><a href="https://selectel.ru/blog/osi-for-beginners/" class="source">Модель OSI</a><a name="linux" href="https://selectel.ru/blog/basic-linux-commands/" class="source">Основные команды терминала Linux</a>Статья была написана по SEO-заданию для блога Selectel. Было очень интересно попробовать разобраться в клиентах удалённого доступа для Linux. Я работал в соответствии с чётким SEO-заданием, поэтому статья называется "RDP-клиенты", несмотря на то, что включает разбор других клиентов: VNC и проприетарных. Но мне понравилось писать технический текст о чём-то, чего я не знал в подробностях. Такие статьи помогают лучше разобраться в новой или уже знакомой теме. Опубликованную версию можно посмотреть в <a href="https://selectel.ru/blog/rdp-clients-for-linux/" target="_blank">блоге Selectel</a>.</p>
-                <p>Для Selectel я написал несколько статей. В блог мои статьи попадали немного отредактированными. Для меня важно, чтобы текст звучал и читался в определённом тоне. После редактуры в некоторых местах я бы предпочёл другие формулировки или другой тон, но это не мой блог.</p>
+                <p><a class="source" href="img/RDP_Linux.pdf" target="_blank">RDP-клиенты для Linux.pdf</a>Статья была написана по SEO-заданию для блога Selectel. Было очень интересно попробовать разобраться в клиентах удалённого доступа для Linux. Я работал в соответствии с чётким SEO-заданием, поэтому статья называется "RDP-клиенты", несмотря на то, что включает разбор других клиентов: VNC и проприетарных. Но мне понравилось писать технический текст о чём-то, чего я не знал в подробностях. Такие статьи помогают лучше разобраться в новой или уже знакомой теме.</p>
+                <p>Для Selectel я написал ещё несколько статей. Например, статьи про <a href="https://selectel.ru/blog/osi-for-beginners/" >Модель OSI</a> и <a name="linux" href="https://selectel.ru/blog/basic-linux-commands/">Основные команды терминала Linux</a>. Статьи попадали в блог немного отредактированными. Местами после редактуры я бы предпочёл другие формулировки или другой тон, но это уже моё занудство.</p>
         </div>
 
         <div class="content cases">
@@ -113,7 +113,7 @@
         </div>
 
         <div class="content cases">
-            <p><a href="img/time.pdf" class="source" target="_blank">DITA</a>На странице <a href="skills.html" title="Открыть в текущей вкладке">Навыки</a> я упомянул, что умею работать с Markdown и DITA, но я не привёл примеров работ. Примеры моих работ на Markdown и DITA я не могу привести. Публиковать исходный код рабочей документации - плохой тон. Конечный результат слишком объёмный для публикации и ничего не скажет ни о использованных приёмах, ни о моих навыках. Но мне всегда интересно пообщаться с людьми, которые пишут документацию на DITA. Не такое это простое дело. Если вы хотите поделиться идеями или задать вопросы о DITA, пишите мне. Мои контакты даны в самом низу и на странице <a href="about.html">Обо мне</a>.</p>
+            <p><a href="img/time.pdf" class="source" target="_blank">DITA</a>На странице <a href="skills.html" title="Открыть в текущей вкладке">Навыки</a> я упомянул, что умею работать с Markdown и DITA, но не привёл примеров работ. Объём исходного кода документации слишком большой и пока не в открытом доступе. Конечный результат в открытом доступе, но он особенно ни о чём не говорит. Тем не менее, мне всегда интересно пообщаться с людьми, которые пишут документацию на DITA. Не такое это простое дело. Можете поделиться со мной своими болями, идеями или просто задать вопросы о DITA. Мои контакты даны в самом низу и на странице <a href="about.html">Обо мне</a>, буду рад обсудить.</p>
         </div>
 
 
