--- a/education.html
+++ b/education.html
@@ -85,7 +85,7 @@
         <div class="content">
             <h1 class="h1">Места обучения Маркиева Владимира</h1>
             <h2 class="h2">2020. Повышение квалификации</h2>
-            <p>В 2020 году я прошёл очный курс по цифровому маркетингу на базе университета ИТМО. Я сталкивался с рекламными сетями и раньше, когда совсем не так подробно. Курс помог мне разложить по полочкам понятия источников трафика, определения целевой аудитории, стоимости за клик и другие. Это было полезно. Курс помог мне понять, что профессионально заниматься настройкой таргета и рекламой в соцсетях я не хочу. Кроме того, курс дал мне идею создать свой сайт.</p>
+            <p>В январе 2020 года я прошёл очный курс по цифровому маркетингу на базе университета ИТМО. Я сталкивался с рекламными сетями и раньше, когда совсем не так подробно. Курс помог мне разложить по полочкам понятия источников трафика, определения целевой аудитории, стоимости за клик и другие. Это было полезно. Курс помог мне понять, что профессионально заниматься настройкой таргета и рекламой в соцсетях я не хочу. Кроме того, курс дал мне идею создать свой сайт.</p>
         </div>
 
         <div class="content">
